fix RoundedTextField in dark mode

--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -2,6 +2,6 @@
   --primary-font: "IRANSans", serif;
   --primary-color: #3f51b5;
   --secondary-color: #e91e63;
-  --header-bg: #212121;
+  --header-bg: #353535;
   --aside-bg: #303030;
 }
